# refactory

./: .gitignore  .mcp.codex.json  .mcp.json  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
agents/: refactor-planner.md
commands/: refactor.md
hooks/: codex-hooks.json  hooks.json  install-deps.sh
scripts/: test.sh
server/: main.py  requirements.txt  validation.py
server/backends/: python.py  typescript.py
server/tsmorph/: package.json  pnpm-lock.yaml  refactor.js
skills/refactoring/: SKILL.md
tests/: conftest.py  test_e2e_mcp.py  test_mcp_server.py  test_python_backend.py  test_python_extra_tools.py  test_typescript_backend.py
